--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"); */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 * {
   margin: 0;
@@ -120,9 +120,10 @@ h1 {
 
 .about {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   width: 100vw;
   align-items: center;
+  
 }
 
 .about img {
@@ -193,6 +194,33 @@ h1 {
   width: 100%;
   height: 150px;
   background-image: url(https://res.cloudinary.com/freelancer2222222222222222/image/upload/v1650543491/samples/2-original_agisst.png);
+  background-size: cover;
+}
+
+ .rym{
+  width: 100%;
+  height: 150px;
+  background-image: url(/img/rick-morty-pelicula.jpg);
+  background-size: cover;
+}
+
+.fp{
+  width: 100%;
+  height: 150px;
+  background-image: url(/img/fondopokemon.jpeg);
+  background-size: cover;
+}
+.fd{
+  width: 100%;
+  height: 150px;
+  background-image: url(/img/fondoclima.jpg);
+  background-size: cover;
+}
+
+.js{
+  width: 100%;
+  height: 150px;
+  background-image: url(/img/javascript-code.jpg);
   background-size: cover;
 }
 
@@ -515,8 +543,8 @@ h1 {
   
   .main img{
     width: 100%;
-  
-  min-height: 300px;
+    height: 50px;
+    /* min-height: 300px; */
     width: min(70%, 350px);
     margin-bottom: 3em;
   }
