--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ body {
 
 .menu li a:hover {
   background-color: aqua;
+  border-radius: 4px;
   color: #191c32;
   transition: 1s;
 }
@@ -170,6 +171,7 @@ h1 {
   -webkit-box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
   -moz-box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
   box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .download-cv:hover {
@@ -248,6 +250,14 @@ h1 {
   width: 300px;
   background-color: #2b3058;
   margin: 1em;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #ffffff;
+  transition: box-shadow 0.3s, transform 0.3s;
+}
+.card:hover {
+  box-shadow: 0 24px 40px rgba(0, 0, 0, 0.6); /* Sombreado más pronunciado en hover */
+  transform: translateY(-5px);
 }
 
 .card__img {
@@ -372,6 +382,10 @@ h1 {
 .card__proyect-links a {
   color: #fff;
   text-decoration: none;
+  transition: color 0.3s;
+}
+.card__proyect-links a:hover{
+  color: #CCD1D1;
 }
 
 .card__proyect-links i {
@@ -468,6 +482,7 @@ h1 {
 .sotial-networks i {
   font-size: 1.5em;
 }
+
 
 .portfolio,
 .contact-section {
