--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap");
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+       */
+
 * {
   /* border: solid 2px red; */
   margin: 0;
@@ -6,15 +8,87 @@
   box-sizing: border-box;
 }
 
+:root[data-theme="light"] {
+  --color-azure: azure;
+  --color-black: black;
+  --color-azure-wrapper: #f0f1f1;
+  --color-black-wrapper: black;
+  --background-d-brand: #2b3058;
+  --color-switcher: #b3b3b3;
+  --color-active: #fff;
+  /* --border-option: 10px solid #fff; */
+  --color-b-menu: black;
+  --color-b-menu-li: black;
+  --color-azure-menu-li: azure;
+  --color-black-menu-active: black;
+  --color-black-menu-li-a: black;
+  --color-black-main: black;
+  --color-u-main-img-hover: #191c32;
+  --color-d-myname: #2b3058;
+  --color-azure-typed-text: #f0f1f1;
+  --color-azure-mybutton: azure;
+  --color-black-mybutton: black;
+  --color-d-mybutton-hover: #2b3058;
+  --color-azure-download-cv: azure;
+  --color-gray-download-cv-hover: gray;
+  --color-azure-about: white;
+  --color-black-divider: black;
+  --color-azure-portfolio-contact-section: #f0f1f1;
+  --color-black-portfolio-heading-h2: black;
+  --color-u-card: #191c32;
+  --color-black-textarea: black;
+  --color-white-footer: white;
+  --color-white-correo: white;
+}
+
+:root[data-theme="dark"] {
+  --color-azure: #00001a;
+  --color-black: gray;
+  --color-azure-wrapper: #191c32;
+  --color-black-wrapper: #fff;
+  --background-d-brand: aqua;
+  --color-switcher: aqua;
+  --color-active: #2b3058;
+  /* --border-option: none; */
+  --transform-option: translateX(100%);
+  --color-b-menu: #fff;
+  --color-b-menu-li: aqua;
+  --color-azure-menu-li: #191c32;
+  --color-black-menu-active: aqua;
+  --color-black-menu-li-a: aqua;
+  --color-black-main: aqua;
+  --color-u-main-img-hover: white;
+  --color-d-myname: aqua;
+  --color-azure-typed-text: #191c32;
+  --color-azure-mybutton: black;
+  --color-black-mybutton: aqua;
+  --color-d-mybutton-hover: azure;
+  --color-azure-download-cv: aqua;
+  --color-gray-download-cv-hover: azure;
+  --color-azure-about: white;
+  --color-black-divider: aqua;
+  --color-azure-portfolio-contact-section: #191c32;
+  --color-black-portfolio-heading-h2: #fff;
+  --color-u-card: #2b3058;
+  --color-black-textarea: #fff;
+  --color-white-footer: aqua;
+  --color-white-correo: aqua;
+}
+
 html {
   scroll-behavior: smooth;
 }
+/* */
 
 body {
-  /* font-family: "Roboto", sans-serif; */
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Roboto", sans-serif;  */
+
+  font-family: "Montserrat";
+  font-optical-sizing: auto;
+  /* font-weight: weight; */
+  font-style: normal;
   font-size: 18px;
-  color: black;
+  color: black; /* black*/
 }
 
 ::-webkit-scrollbar {
@@ -22,37 +96,161 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #00001a;
-  
+  background: var(--color-azure); /*#00001a */
+
   opacity: 100%; /* Color de fondo de la pista */
 }
 
 ::-webkit-scrollbar-thumb {
-  background: gray; /* Color del 'scrollbar' */
+  background: var(--color-black); /* gray*/ /* Color del 'scrollbar' */
   border-radius: 4px; /* Borde redondeado */
 }
-
+/* */
 .wrapper {
   /* width: 100vw; */
   width: 100%;
   height: 100vh;
-  background-color: #191c32;
-  color: #fff;
+   background-color: var(--color-azure-wrapper); /*#191c32 */
+  
+  color: var(--color-black-wrapper); /* #fff*/
 }
 .navbar {
   display: flex;
   justify-content: space-between;
   padding: 2em;
 }
+
+
 .brand {
   margin-top: -7px;
+  display: inline-block;
+  transition: transform 0.3s ease-in-out; /* Transición para un retorno suave */
 }
+
+.brand:hover {
+  animation: rotateAnimation 3s infinite linear,
+    returnAnimation 0.3s ease-in-out forwards;
+}
+
+@keyframes rotateAnimation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes returnAnimation {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 .brand span {
-  color: aqua;
+  color: var(--background-d-brand); /*aqua */
   font-size: 30px;
 }
 .brand h2 {
   font-size: 30px;
+}
+/* margin-bottom: 2rem;  */
+/* .main__switcher {
+  width: 31px;
+  margin: 0 auto;
+  
+  padding: 2px;
+  height: 18px;
+  border-radius: 9px;
+  background-color: var(--color-switcher);
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  position: relative;
+}
+
+.main__check {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.main__option {
+  width: 13.2px;
+  height: 13.2px;
+  background-color: var(--color-active);
+  border: var(--border-option);
+  border-radius: 50%;
+  transition: transform 0.3s;
+  transform: var(--transform-option, none);
+} */
+.main__switcher {
+  
+  position: relative;
+  width: 50px;
+  height: 25px;
+  margin: 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.main__switcher label {
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 25px;
+  border-radius: 50px;
+  background: linear-gradient(to bottom, #b3b3b3, #e6e6e6);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.main__switcher label:after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  background-color: var(--color-active);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+}
+
+.main__switcher input[type="checkbox"]:checked + label {
+  background: linear-gradient(to bottom, aqua, rgb(192, 231, 231));
+}
+
+.main__switcher input[type="checkbox"]:checked + label:after {
+  transform: translateX(25px);
+}
+
+.main__switcher label:hover {
+  background: linear-gradient(to bottom, #b3b3b3, #e6e6e6);
+}
+
+.main__switcher label:hover:after {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+.main__check {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 25px;
 }
 .menu {
   display: flex;
@@ -63,25 +261,36 @@ body {
   list-style: none;
 }
 .menu a {
-  color: #fff;
+  color: var(--color-b-menu); /* #fff*/
   text-decoration: none;
   padding: 10px 20px;
 }
 
 .menu li:hover a {
-  background-color: aqua;
-  color: #191c32;
+  background-color: var(--color-b-menu-li); /*aqua */
+  color: var(--color-azure-menu-li); /* #191c32*/
 }
 
 .menu .active {
-  color: aqua;
+  color: var(--color-black-menu-active); /* aqua*/
 }
 
 .menu li a:hover {
-  background-color: aqua;
+  background-color: var(--color-black-menu-li-a); /*aqua */
   border-radius: 4px;
-  color: #191c32;
+  color: var(--color-azure-menu-li); /* #191c32*/
   transition: 1s;
+}
+
+.info-content {
+  transition: box-shadow 0.3s, transform 0.3s;
+  padding: 2em;
+}
+.info-content:hover {
+  padding: 2em;
+  border-radius: 1em;
+  box-shadow: 0 24px 40px rgba(0, 0, 0, 0.6);
+  transform: translateY(-5px);
 }
 
 .toggle_menu,
@@ -100,7 +309,7 @@ body {
 }
 
 .main img {
-  border: 7px solid aqua;
+  border: 7px solid var(--color-black-main); /*aqua */
   width: 400px;
   height: 500px;
   /* z-index: 1; */
@@ -110,7 +319,9 @@ body {
 
 .main img:hover {
   transform: scale(1.1);
-  border-color: white; /* Cambiamos el color del borde al hacer hover */
+  border-color: var(
+    --color-u-main-img-hover
+  ); /* white*/ /* Cambiamos el color del borde al hacer hover */
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Agregamos una sombra */
   /* filter: grayscale(30%) */
 }
@@ -123,7 +334,7 @@ h1 {
    color: aqua; 
 }*/
 .myname {
-  color: aqua;
+  color: var(--color-d-myname); /* aqua*/
 }
 
 .typed-text {
@@ -131,7 +342,7 @@ h1 {
   overflow: hidden;
   white-space: nowrap; /* Evita saltos de línea */
   position: relative; /* Añade posición relativa para posicionar el cursor */
-  border-right: 0.15em solid #191c32; /* Cambia el color o estilo del cursor de escritura */
+  border-right: 0.15em solid var(--color-azure-typed-text); /*#191c32 */ /* Cambia el color o estilo del cursor de escritura */
   animation: typing 6s steps(30, end) infinite; /* Aplicar animación de escritura gradual */
 }
 
@@ -160,10 +371,105 @@ h1 {
     opacity: 1;
   } /* Hace que el cursor parpadee */
 }
+/* .mybutton {
+  padding: 10px 20px;
+  color: var(--color-azure-mybutton); /*black */
+/*background-color: var(--color-black-mybutton); /*aqua */
+/*border: none;
+  border-radius: 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  -webkit-box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
+  -moz-box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
+  box-shadow: 1px 3px 11px -5px rgba(102, 231, 200, 0.69);
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.mybutton:hover {
+  background-color: var(--color-d-mybutton-hover); /*azure */
+/*box-shadow: none;
+} */
+
+.mybutton {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  margin-top: 10px;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.mybutton:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.mybutton:active {
+  color: #000;
+}
+
+.mybutton:active:after {
+  background: transparent;
+}
+
+.mybutton:hover:before {
+  opacity: 1;
+}
+
+.mybutton:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #191919;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
 
 .download-cv {
   padding: 10px 20px;
-  background-color: aqua;
+  background-color: var(--color-azure-download-cv); /*aqua */
   border: none;
   border-radius: 20px;
   margin-top: 10px;
@@ -175,12 +481,12 @@ h1 {
 }
 
 .download-cv:hover {
-  background-color: azure;
+  background-color: var(--color-gray-download-cv-hover); /*azure */
   box-shadow: none;
 }
 
 .about {
-  background-color: white;
+  background-color: var(--color-azure-about); /*white */
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   width: 100vw;
@@ -195,7 +501,6 @@ h1 {
 .about-info {
   grid-column: 5/10;
   padding: 3em;
-
 }
 
 .about-info h2 {
@@ -206,7 +511,7 @@ h1 {
 .divider {
   height: 4px;
   width: 60px;
-  background-color: aqua;
+  background-color: var(--color-black-divider); /* aqua*/
   margin-top: 5px;
   margin-bottom: 2em;
 }
@@ -218,7 +523,7 @@ h1 {
 .portfolio,
 .contact-section {
   width: 100vw;
-  background-color: #191c32;
+  background-color: var(--color-azure-portfolio-contact-section); /*#191c32 */
   color: #fff;
 }
 
@@ -232,7 +537,7 @@ h1 {
 .portfolio-heading h2,
 .contact-heading h2 {
   font-size: 2.5em;
-  color: #fff;
+  color: var(--color-black-portfolio-heading-h2); /* #fff*/
 }
 
 /* ajustar */
@@ -252,7 +557,8 @@ h1 {
   margin: 1em;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: #ffffff;
+  color: #ffffff; /*#ffffff */
+
   transition: box-shadow 0.3s, transform 0.3s;
 }
 .card:hover {
@@ -287,7 +593,7 @@ h1 {
   width: 100%;
   height: 150px;
   padding: 10px;
-  background-color: black;
+  background-color: black; /*black */
   opacity: 0.8;
   transition: opacity 0.3s ease, max-height 0.3s ease;
 }
@@ -304,7 +610,7 @@ h1 {
   height: 0;
   overflow: hidden;
   transition: opacity 0.3s ease, max-height 0.3s ease;
-  scrollbar-color: gray black;
+  scrollbar-color: gray black; /* gray*/ /*black */
   scrollbar-width: thin;
 }
 
@@ -313,7 +619,7 @@ h1 {
   width: 100%;
   height: 150px;
   padding: 10px;
-  background-color: black;
+  background-color: black; /* black*/
   opacity: 0.8;
   overflow-y: auto;
   transition: opacity 0.3s ease, max-height 0.3s ease;
@@ -338,7 +644,7 @@ h1 {
   width: 100%;
   height: 150px;
   padding: 10px;
-  background-color: black;
+  background-color: black; /* black*/
   opacity: 0.8;
   transition: opacity 0.3s ease, max-height 0.3s ease;
 }
@@ -356,7 +662,7 @@ h1 {
   height: 0;
   overflow: hidden;
   transition: opacity 0.3s ease, max-width 0.5s ease;
-  scrollbar-color: gray black;
+  scrollbar-color: gray black; /* gray*/ /* black*/
   scrollbar-width: thin;
 }
 
@@ -365,7 +671,7 @@ h1 {
   width: 100%;
   height: 150px;
   padding: 10px;
-  background-color: black;
+  background-color: black; /*black */
   opacity: 0.8;
   overflow-y: auto;
   transition: opacity 0.3s ease, max-height 0.3s ease;
@@ -384,8 +690,8 @@ h1 {
   text-decoration: none;
   transition: color 0.3s;
 }
-.card__proyect-links a:hover{
-  color: #CCD1D1;
+.card__proyect-links a:hover {
+  color: #ccd1d1;
 }
 
 .card__proyect-links i {
@@ -483,11 +789,10 @@ h1 {
   font-size: 1.5em;
 }
 
-
 .portfolio,
 .contact-section {
   width: 100vw;
-  background-color: #191c32;
+  background-color: var(--color-azure-portfolio-contact-section); /*#191c32 */
   color: #fff;
 }
 
@@ -502,7 +807,7 @@ h1 {
 .portfolio-heading h2,
 .contact-heading h2 {
   font-size: 2.5em;
-  color: #fff;
+  color: var(--color-black-portfolio-heading-h2); /*#fff */
 }
 
 /* .portfolio .container {
@@ -516,7 +821,7 @@ h1 {
 
 .card {
   width: 300px;
-  background-color: #2b3058;
+  background-color: var(--color-u-card); /* #2b3058*/
   margin: 1em;
 }
 
@@ -563,7 +868,9 @@ h1 {
   margin: 0 auto;
   margin-top: 10em;
 }
-
+.contact-form h4 {
+  color: var(--color-black-textarea);
+}
 .contact-section img {
   width: 750px;
   height: 700px;
@@ -580,8 +887,8 @@ h1 {
   height: 150px;
   padding: 1.5em;
   background: none;
-  border: 1px solid #fff;
-  color: #fff;
+  border: 1px solid var(--color-black-textarea);
+  color: var(--color-black-textarea);
 }
 
 .form-group .input {
@@ -589,8 +896,8 @@ h1 {
   margin-bottom: 1em;
   background: none;
   border: none;
-  border-bottom: 1px solid #fff;
-  color: #fff;
+  border-bottom: 1px solid var(--color-black-textarea);
+  color: var(--color-black-textarea);
 }
 
 .form-group .btn-submit {
@@ -602,6 +909,7 @@ h1 {
   background-color: aqua;
 }
 
+
 .footer {
   display: flex;
   flex-direction: column;
@@ -611,7 +919,7 @@ h1 {
   width: 100vw;
   height: 250px;
   padding: 2em;
-  background-color: aqua;
+  background-color: var(--color-white-footer); /* aqua*/
 }
 
 .footer-content h2 {
@@ -638,7 +946,7 @@ h1 {
 .correo {
   margin-top: 10px;
   /* height: 100%; */
-  background-color: aqua;
+  background-color: var(--color-white-correo); /* aqua*/
 }
 .probando {
   display: none;
@@ -700,7 +1008,6 @@ h1 {
     /* min-height: 300px; */
     width: min(70%, 350px);
     /* margin-bottom: 5em; */
-    
   }
   .info-content {
     display: flex;
